feat(iam): refactor iam context.